--- a/ServicioCrecePlus/ServicioCrecePlus.csproj
+++ b/ServicioCrecePlus/ServicioCrecePlus.csproj
@@ -86,9 +86,9 @@
     <Compile Include="Items.cs">
       <DependentUpon>CrecePlus.tt</DependentUpon>
     </Compile>
-    <Compile Include="LectorCSV.cs" />
+    <Compile Include="Lector.cs" />
+    <Compile Include="LectorPQ.cs" />
     <Compile Include="Models\Cliente.cs" />
-    <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Orden.cs" />
     <Compile Include="Models\Producto.cs" />
     <Compile Include="Ordenes.cs">
@@ -112,6 +112,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\Registro.cs" />
+    <Compile Include="ViewModel\Renglon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
